#	@(#)CHANGES	5.1 (Berkeley) 5/11/93

This new version is almost identical to the timed and timedc code
that has been shipped for years by a workstation vendor.

Among the many changes:

improve `timedc msite` to accept a list of hostnames.

change slave-masters to answer the packets generated by `timedc msite`
    with the name of the real master, not their own.  This makes it
    possible to "chase the chain" of slave servers to the ultimate
    master.

much improve the log caused by `timedc trace on`:
    -made `timed -t` work.
    -suppression of repeated entries, which both slowed down the daemon
	(sometimes catastrophically) and tended to make disks fill up
	even more quickly.
    -better time stamps on log entries
    -more messages
    -dump information about slaves, master, and so on each time
	a message asking the log be turned on is received, and
	when the log is turned off.
    -fewer CPU cycles

use a hash table to keep track of slaves, instead of the stupid linear
    list.  This becomes handy with hundreds of slaves, instead of
    the original design limit of "a room with a few VAX's."

separate the main protocol timer from that used to look for other networks
    to master.

time stamp packets received by the daemon, so that time corrections
    are not made (even more) inaccurate by waiting in the internal,
    timed queue while the daemon is processing other messages.

made -n and -i work with subnets not named in /etc/networks

compute the median of the measured clocks, instead of the average
    of "good" times.

vastly improve the accuracy of the clock difference measure by 
    `timedc clockdiff`.

use adjtime() when possible, and directly set the clock only when
    necessary.

when the requested adjustment is small, perform only part of it, to
    damp oscillations and improve the long term accuracy of the
    adjustments.

fix uncounted core-dumps on machines that do not allow dereferencing 0
    in both the daemon and timedc.
