@@ -1,3 +1,5 @@
+/*	$Id$	*/
+
 /*-
  * Copyright (c) 1985, 1993 The Regents of the University of California.
  * All rights reserved.
