@@ -1,3 +1,5 @@
+#	$OpenBSD: src/usr.sbin/timed/CHANGES,v 1.2 2001/04/07 20:02:08 ho Exp $
+#
 #	@(#)CHANGES	5.1 (Berkeley) 5/11/93
 
 This new version is almost identical to the timed and timedc code
